fixed the overflow issue

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   background-color: rgb(255, 255, 255);
   border-radius: 12px;
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
+  overflow: auto;
 }
 
 header {
